--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/juangr18/Veterinay-Project#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "mongoose": "^6.2.1"
